Fix crash when looking at style rules of element matching no rules.  b=141022  r=hewitt  sr=waterson