extensions/inspector/base/src/inDOMUtils.cpp
@@ -99,14 +99,11 @@ inDOMUtils::GetStyleRules(nsIDOMElement *aElement, nsISupportsArray **_retval)
   styleContext->GetRuleNode(&ruleNode);
   
   nsCOMPtr<nsIStyleRule> srule;
-  PRBool isRoot;
-  do {
+  for (PRBool isRoot; mCSSUtils->IsRuleNodeRoot(ruleNode, &isRoot), !isRoot;
+       mCSSUtils->GetRuleNodeParent(ruleNode, &ruleNode)) {
     mCSSUtils->GetRuleNodeRule(ruleNode, getter_AddRefs(srule));
     rules->InsertElementAt(srule, 0);
-    
-    mCSSUtils->GetRuleNodeParent(ruleNode, &ruleNode);
-    mCSSUtils->IsRuleNodeRoot(ruleNode, &isRoot);
-  } while (!isRoot);
+  }
 
   *_retval = rules;
   NS_IF_ADDREF(*_retval);
